--- a/src/drafts/put-ou-post.html
+++ b/src/drafts/put-ou-post.html
@@ -77,6 +77,7 @@ http://www.infoq.com/presentations/rest-introduction?utm_source=infoqEmail&utm_m
                             <li>Quando você quiser criar um recurso e sabe qual sua URI única.</li>
                         </ul>
 
+
                         <h3>Exemplos</h3>
                         <ul>
                             <li>POST - /api/usuario - Cria um novo usuário</li>
@@ -86,7 +87,7 @@ http://www.infoq.com/presentations/rest-introduction?utm_source=infoqEmail&utm_m
                             <li>POST - /api/usuario/123/posts/like - Curte todos os posts do usuário 123</li>
                             <li>POST - /api/post/comentario/123/comentario - Cria um sub-comentário do comentário com ID 123</li>
                             <li>PUT &nbsp;- /api/post/put-ou-post - Cria um novo artigo com ID igual a put-ou-post (<a href="http://www.w3.org/Provider/Style/URI" target="_blank">URL-friendly</a>)</li>
-                            <li>PUT &nbsp;- /api/carro/AAA-1234 - Altera os valores do carro com placa AAA-1234</li>
+                            <li>PUT &nbsp;- /api/carro/AAA-1234 - Altera os valores do carro com placa AAA-1234 ou cria um novo</li>
                         </ul>
 
                     </div>
