--- a/src/5-dicas-para-uma-boa-api.html
+++ b/src/5-dicas-para-uma-boa-api.html
@@ -1,4 +1,34 @@
-include "../includes/head.html"
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <title>POGnotFound </title>
+
+    include "includes/head.html"
+
+</head>
+
+<body>
+include "includes/menu.html"
+
+
+
+<header class="shadow-1">
+    <div class="row">
+
+        <div class="content">
+            <div class="small-12 small-centered columns">
+                <h3>5 dicas para uma boa API</h3>
+
+                <p>The Clean API</p>
+
+            </div>
+        </div>
+        <div class="scroller" data-href="section">
+            <span class="glyphicon glyphicon-chevron-down"></span>
+        </div>
+    </div>
+</header>
 
 <!-- Blog Posts -->
 <section>
@@ -120,9 +150,14 @@ include "../includes/head.html"
 
                     </div>
 
+                    include "includes/disqus.html"
                 </article>
             </div>
         </div>
     </main>
 </section>
 
+
+include "includes/footer.html"
+</body>
+</html>
